# directory_tree_generator

./: Cargo.toml  LICENSE  README.md
src/: main.rs
