[package]
name = "directory_tree_generator"
version = "0.1.0"
authors = ["Virx <virx@virxcase.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true
